crates/sid-widgets/tests/snapshots/database_render__database_active_multiline_sql.snap
---
source: crates/sid-widgets/tests/database_render.rs
expression: s
---
┌ Connections ───────────────┐┌ SQL ───────────────────────────────────────────────────────────────┐
│> + add new                 ││SELECT * FROM users                                                 │
│  * prod-db (postgres)      ││WHERE id > 100;                                                     │
│  o analytics (sqlite)      ││                                                                    │
│  o scratch (sqlite)        ││                                                                    │
│                            ││                                                                    │
│                            │└────────────────────────────────────────────────────────────────────┘
│                            │┌ Results · no results yet ──────────────────────────────────────────┐
│                            ││(no query has run yet — Ctrl+R to execute)                          │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            │└────────────────────────────────────────────────────────────────────┘
└────────────────────────────┘Tab cycles right pane · Ctrl+R run query · Ctrl+E export CSV · current
