crates/sid-widgets/tests/snapshots/database_render__database_empty_connections.snap
---
source: crates/sid-widgets/tests/database_render.rs
expression: s
---
┌ Connections ───────────────┐┌ SQL ───────────────────────────────────────────────────────────────┐
│> + add new                 ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            │└────────────────────────────────────────────────────────────────────┘
│                            │┌ Results · no results yet ──────────────────────────────────────────┐
│                            ││(no query has run yet — Ctrl+R to execute)                          │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            │└────────────────────────────────────────────────────────────────────┘
└────────────────────────────┘Tab cycles right pane · Ctrl+R run query · Ctrl+E export CSV · current
