crates/sid-widgets/tests/snapshots/database_render__database_results_focused.snap
---
source: crates/sid-widgets/tests/database_render.rs
expression: s
---
┌ Connections ───────────────┐┌ SQL ───────────────────────────────────────────────────────────────┐
│+ add new                   ││                                                                    │
│  * prod-db (postgres)      ││                                                                    │
│  o analytics (sqlite)      ││                                                                    │
│  o scratch (sqlite)        ││                                                                    │
│                            ││                                                                    │
│                            │└────────────────────────────────────────────────────────────────────┘
│                            │┌ Results · rows 3 ──────────────────────────────────────────────────┐
│                            ││id                     name                   created               │
│                            ││101                    alice                  2026-01-01            │
│                            ││102                    bob                    2026-01-02            │
│                            ││103                    carol                  2026-01-03            │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            │└────────────────────────────────────────────────────────────────────┘
└────────────────────────────┘Tab cycles right pane · Ctrl+R run query · Ctrl+E export CSV · current
