crates/sid-widgets/tests/snapshots/database_render__database_three_connections_editor.snap
---
source: crates/sid-widgets/tests/database_render.rs
expression: s
---
┌ Connections ───────────────┐┌ * SQL ─────────────────────────────────────────────────────────────┐
│> o prod-db (postgres)      ││SELECT * FROM users;                                                │
│  o analytics (sqlite)      ││                                                                    │
│  o scratch (sqlite)        ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            │└────────────────────────────────────────────────────────────────────┘
│                            │┌   Results · no results yet ────────────────────────────────────────┐
│                            ││(no query has run yet — Ctrl+R to execute)                          │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            ││                                                                    │
│                            │└────────────────────────────────────────────────────────────────────┘
└────────────────────────────┘Tab cycles right pane · Ctrl+R run query · Ctrl+E export CSV · current
